--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/homework/1-AE/last_model.ckpt
+/homework/1-AE/GAN_HW1.pdf
+/homework/1-AE/archive.zip
