--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,5 @@ dmypy.json
 /homework/1-AE/last_model.ckpt
 /homework/1-AE/GAN_HW1.pdf
 /homework/1-AE/archive.zip
+/homework/2-GAN/celeba.zip
+/homework/2-GAN/celeba/
