--- a/homework/3-NF_VAE/configs/nf.yaml
+++ b/homework/3-NF_VAE/configs/nf.yaml
@@ -12,7 +12,7 @@ optimizer:
 datamodule:
   _target_: datamodule.CelebA
 
-  data_dir: /home/anspiridonov/SHAD/GAN/DeepGenerativeModels/homework/2-GAN/celeba
+  data_dir: ~/GANS/homework/2-GAN/celeba
   batch_size: 32
   num_workers: 16
   train_transforms:
@@ -31,8 +31,8 @@ datamodule:
     ToTensor: {}
 
 trainer:
-#  gpus: [3]
-#  accelerator: ddp
+  gpus: [1]
+  accelerator: ddp
   log_every_n_steps: 20
 
 logger:
